refactor(#72):FavoriteMenuService 관련 에러 수저ã정